--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div id="app-container" class="max-w-2xl mx-auto p-4 md:p-6">
         <!-- Header -->
         <header class="flex justify-between items-center mb-8">
-            <h1 class="text-3xl font-bold text-gray-900">Smart Alarm</h1>
+            <h1 class="text-3xl font-bold text-gray-900">Smart 2 Alarm</h1>
             <div class="flex items-center space-x-2">
                 <button id="permission-btn" class="bg-blue-100 text-blue-700 px-3 py-1 rounded-lg text-sm font-medium hidden hover:bg-blue-200">
                     Grant Permissions
@@ -1102,4 +1102,5 @@
     </script>
 </body>
 </html>
+
 
